# IFFBot

./: .gitignore  .gitmodules  README.md  bot.py  pyproject.toml  requirements.txt
glkclient/: CMakeLists.txt  Makefile  ReadMe.md  a.out  client.cpp
glkclient/cheapglk/: Makefile  main.c
glkclient/client.dSYM/Contents/Resources/DWARF/: client
iffbot/: bot.py  storage.py  story.py
src/: babel.py  blorb.py  iff.py  story.py
src/zcode/: game.py  input.py  opcodes.py  output.py  routines.py  screen.py  sounds.py
test/: test_storage.py  test_story.py
